--- a/app1/package.json
+++ b/app1/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve:micro": "vue-cli-service serve --mode micro",
+    "build": "vue-cli-service build --mode buildMicro"
   },
   "dependencies": {
     "core-js": "^3.6.5",
