--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "dev": "lerna run dev",
+    "echo": "lerna run echo"
+  },
   "devDependencies": {
     "lerna": "^4.0.0"
   }
