--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "serve:micro": "vue-cli-service serve --mode micro",
-    "build": "vue-cli-service build --mode buildMicro"
+    "build": "vue-cli-service build --mode buildMicro",
+    "dev": "yarn run serve:micro",
+    "echo": "echo app1 npm version: $npm_package_version"
   },
   "dependencies": {
     "core-js": "^3.6.5",
