--- a/packages/app3/package.json
+++ b/packages/app3/package.json
@@ -73,7 +73,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "dev": "yarn run start",
+    "echo": "echo app3 npm version: $npm_package_version"
   },
   "eslintConfig": {
     "extends": [
